# multi-agent-workflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: app.yaml
configs/agents/: coder.yaml  judge.yaml  optimist.yaml  pessimist.yaml  researcher.yaml  reviewer.yaml
docs/: AGENT_GUIDE.md  DEVELOPMENT_CHECKLIST.md  PLANNING.md  agent_answer.md
examples/: api_examples.md  custom_agent.py  parallel_research.py  simple_pipeline.py  upstage_example.py
scripts/: run_server.py
src/: main.py
src/agents/: __init__.py  base.py  loader.py
src/agents/implementations/: __init__.py  coder.py  researcher.py  reviewer.py
src/api/: __init__.py  routes.py  routes.py.tmp.214088.1764564773534  schemas.py
src/core/: __init__.py  conversation.py  message_bus.py  orchestrator.py  registry.py
src/llm/: __init__.py  anthropic.py  base.py  factory.py  upstage.py
src/models/: __init__.py  agent.py  conversation.py  message.py
src/patterns/: __init__.py  base.py  debate.py  debate.py.tmp.171364.1764314563247  hierarchical.py  parallel.py  router.py  sequential.py
src/utils/: __init__.py  config.py  error_handlers.py  exceptions.py  logging.py  observability.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agent_implementations.py  test_agent_loader.py  test_base_agent.py  test_conversation_manager.py  test_llm_providers.py  test_main.py  test_message_bus.py  test_models.py  test_orchestrator.py  test_patterns.py  test_registry.py  test_utils.py
